@@ -29,6 +29,7 @@ import fr.dwightstudio.jarmemu.base.asm.exception.SyntaxASMException;
 import fr.dwightstudio.jarmemu.base.gui.JArmEmuApplication;
 import fr.dwightstudio.jarmemu.base.sim.entity.FilePos;
 import fr.dwightstudio.jarmemu.base.sim.entity.StateContainer;
+import fr.dwightstudio.jarmemu.base.util.WordUtils;
 import org.jetbrains.annotations.NotNull;
 
 public class ByteDirective extends ParsedDirective {
@@ -57,8 +58,8 @@ public class ByteDirective extends ParsedDirective {
         try {
             for (int i = 0; i < arg.length; i++) {
                 int data = stateContainer.evalWithAccessible(arg[i].strip());
-                if (Integer.numberOfLeadingZeros(data) >= 24) {
-                    byteArray[i] = (byte) data;
+                if (!WordUtils.overflows(data, 8)) {
+                        byteArray[i] = (byte) data;
                 } else {
                     throw new SyntaxASMException(JArmEmuApplication.formatMessage("%exception.directive.overflowingByteValue", args));
                 }
