@@ -126,20 +126,16 @@ public class LDRInstruction extends ParsedInstruction<Register, AddressArgument.
             case null -> arg1.setData(stateContainer.getMemory().getWord(address));
             case H -> {
                 if (this.modifier.doUpdateFlags()) {
-                    short value = stateContainer.getMemory().getHalf(address);
-                    if (value < 0) arg1.setData((0xFFFF << 16) + value);
-                    else arg1.setData(value);
-                } else {
                     arg1.setData(stateContainer.getMemory().getHalf(address));
+                } else {
+                    arg1.setData(Short.toUnsignedInt(stateContainer.getMemory().getHalf(address)));
                 }
             }
             case B -> {
                 if (this.modifier.doUpdateFlags()) {
-                    byte value = stateContainer.getMemory().getByte(address);
-                    if (value < 0) arg1.setData((0xFFFFFF << 8) + value);
-                    else arg1.setData(value);
-                } else {
                     arg1.setData(stateContainer.getMemory().getByte(address));
+                } else {
+                    arg1.setData(Byte.toUnsignedInt(stateContainer.getMemory().getByte(address)));
                 }
             }
         }
