@@ -1,7 +1,9 @@
 1.1.1 -> 1.1.2
 
+- Improved data length checking
 - Fixed typos in onboarding tour (resolved #21)
 - Fixed space directive being unusable (resolved #22)
+- Fixed LDR instruction not behaving as intended with S flag (resolved #23)
 
 
 1.1.0 -> 1.1.1
